# api/ambulance-project.openapi.yaml
@@ -14,15 +14,75 @@ info:
 tags:
   - name: mealOrders
     description: Meal Orders API
+  - name: ambulances
+    description: Ambulance details
 
 paths:
-  "/meal-orders":
+  "/ambulance":
+    post:
+      tags:
+        - ambulances
+      summary: Saves new ambulance definition
+      operationId: createAmbulance
+      description: Use this method to initialize new ambulance in the system
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Ambulance"
+            examples:
+              request-sample:
+                $ref: "#/components/examples/AmbulanceExample"
+        description: Ambulance details to store
+        required: true
+      responses:
+        "200":
+          description: >-
+            Value of stored ambulance
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Ambulance"
+              examples:
+                updated-response:
+                  $ref: "#/components/examples/AmbulanceExample"
+        "400":
+          description: Missing mandatory properties of input object.
+        "409":
+          description: Entry with the specified id already exists
+  "/ambulance/{ambulanceId}":
+    delete:
+      tags:
+        - ambulances
+      summary: Deletes specific ambulance
+      operationId: deleteAmbulance
+      description: Use this method to delete the specific ambulance from the system.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Item deleted
+        "404":
+          description: Ambulance with such ID does not exist
+  "/meal-orders/{ambulanceId}/records":
     get:
       tags:
         - mealOrders
       summary: Provides the list of meal orders
       operationId: getMealOrders
       description: Get a list of all meal orders
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
       responses:
         "200":
           description: List of meal orders
@@ -36,7 +96,7 @@ paths:
                 response:
                   $ref: "#/components/examples/MealOrdersExample"
         "404":
-          description: No meal orders found
+          description: No meal orders found for given ambulance
 
     post:
       tags:
@@ -44,6 +104,13 @@ paths:
       summary: Creates a new meal order
       operationId: createMealOrder
       description: Use this method to create a new meal order
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
@@ -66,8 +133,12 @@ paths:
                   $ref: "#/components/examples/MealOrderExample"
         "400":
           description: Invalid input
+        "404":
+          description: Ambulance with such ID does not exists
+        "409":
+          description: Entry with the specified id already exists
 
-  "/meal-orders/{orderId}":
+  "/meal-orders/{ambulanceId}/records/{orderId}":
     get:
       tags:
         - mealOrders
@@ -75,6 +146,12 @@ paths:
       operationId: getMealOrder
       description: Get details of a specific meal order by its ID
       parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
         - in: path
           name: orderId
           description: ID of the meal order
@@ -101,6 +178,12 @@ paths:
       operationId: updateMealOrder
       description: Use this method to update the content of a specific meal order
       parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
         - in: path
           name: orderId
           description: ID of the meal order
@@ -139,6 +222,12 @@ paths:
       operationId: deleteMealOrder
       description: Use this method to delete a specific meal order
       parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
         - in: path
           name: orderId
           description: ID of the meal order
@@ -180,8 +269,47 @@ components:
           description: Time when the meal is to be consumed
       example:
         $ref: "#/components/examples/MealOrderExample"
+    Ambulance:
+      type: object
+      required: [ "id", "name", "roomNumber"]
+      properties:
+        id:
+          type: string
+          example: trnava-onkologia
+          description: Unique identifier of the ambulance
+        name:
+          type: string
+          example: Onkologická ambulancia Trnava
+          description: Human readable display name of the ambulance
+        roomNumber:
+          type: string
+          example: 232 - 1.poschodie
+        mealOrders:
+          type: array
+          items:
+            $ref: '#/components/schemas/MealOrder'
+      example:
+        $ref: "#/components/examples/AmbulanceExample"
 
   examples:
+    AmbulanceExample:
+      summary: Example ambulance
+      description: Example of an ambulance with all necessary details
+      value:
+        id: "trnava-onkologia"
+        name: "Onkologická ambulancia Trnava"
+        roomNumber: "232 - 1.poschodie"
+        mealOrders:
+          - id: "1"
+            name: John Doe
+            dietaryReq: Vegetarian
+            medicalNeed: Diabetes
+            consumationTime: "2024-05-26T12:00:00Z"
+          - id: "2"
+            name: Jane Smith
+            dietaryReq: Gluten-Free
+            medicalNeed: High-temperature
+            consumationTime: "2024-05-26T12:30:00Z"
     MealOrderExample:
       summary: Example meal order
       description: Example of a meal order with all necessary details
